@@ -426,7 +426,7 @@ double gretl_model_get_scalar (const MODEL *pmod, ModelDataIndex idx,
 			       int *err);
 
 double *
-gretl_model_get_series (const MODEL *pmod, const DATAINFO *pdinfo, 
+gretl_model_get_series (MODEL *pmod, const DATAINFO *pdinfo, 
 			ModelDataIndex idx, int *err);
 
 gretl_matrix *gretl_model_get_matrix (MODEL *pmod, ModelDataIndex idx, 
