@@ -1720,37 +1720,41 @@ static int submask_match (const char *s1, const char *s2, int n)
    (subsampled) data set from the current one
 */
 
-int model_sample_problem (const MODEL *pmod, const DATAINFO *pdinfo)
+int model_sample_problem (MODEL *pmod, const DATAINFO *pdinfo)
 {
     int n = pdinfo->n;
+    int ret = 1;
 
-    /* case: model has no sub-sampling info recorded */
     if (pmod->submask == NULL) {
-	/* if data set is not sub-sampled either, we're OK */
+	/* the model has no sub-sampling info recorded */
 	if (pdinfo->submask == NULL) {
-	    return 0;
+	    /* data set is not sub-sampled either, OK */
+	    ret = 0;
 	} else {
 	    fputs(I_("dataset is subsampled, model is not\n"), stderr);
 	    strcpy(gretl_errmsg, _("dataset is subsampled, model is not\n"));
-	    return 1;
+	    ret = 1;
 	}
-    }
-
-    /* case: model (or modelspec) has sub-sampling info recorded */
-    if (pdinfo->submask == NULL) {
-	fputs(I_("model is subsampled, dataset is not\n"), stderr);
-	strcpy(gretl_errmsg, _("model is subsampled, dataset is not\n"));
-	return 1;
-    } else { 
-	/* do the subsamples (model and current data set) agree? */
-	if (submask_match(pdinfo->submask, pmod->submask, n)) {
-	    return 0;
+    } else {
+	/* the model does have sub-sampling info recorded */
+	if (pdinfo->submask == NULL) {
+	    fputs(I_("model is subsampled, dataset is not\n"), stderr);
+	    strcpy(gretl_errmsg, _("model is subsampled, dataset is not\n"));
+	    ret = 1;
+	} else if (submask_match(pdinfo->submask, pmod->submask, n)) {
+	    /* the subsamples (model and current data set) agree, OK */
+	    ret = 0;
 	} else {
+	    /* the subsamples differ */
 	    strcpy(gretl_errmsg, _("model and dataset subsamples not the same\n"));
-	    return 1;
+	    ret = 1;
 	}
     }
 
-    /* not reached */
-    return 1;
+    if (ret == 0 && pmod->dataset != NULL) {
+	/* the model carries a now redundant auxiliary dataset */
+	free_model_dataset(pmod);
+    }
+
+    return ret;
 }
